<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="25dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_marginBottom="16dp"
        android:id="@+id/edt_name"
        android:hint="@string/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:maxLength="10"
        android:inputType="number"
        android:layout_marginBottom="16dp"
        android:id="@+id/edt_number"
        android:hint="@string/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:checked="true"
            android:layout_marginBottom="16dp"
            android:id="@+id/rbtn_male"
            android:text="@string/male"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RadioButton
            android:layout_marginBottom="16dp"
            android:id="@+id/rbtn_female"
            android:text="@string/female"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RadioGroup>

    <Button
        android:onClick="addContact"
        android:padding="16dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:id="@+id/btn_add_contact"
        android:text="@string/add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>